# mp-drone-control

./: .gitattributes  .gitignore  CONTEXT.md  Makefile  README.md  TODO.md  create_efficiency_analysis.py  create_gesture_figure.py  create_per_class_analysis.py  fix_efficiency_spacing.py  fix_final_spacing.py  fix_gesture_layout.py  fix_per_class_spacing.py  gesture_labels.txt  load_real_gestures.py  load_real_gestures_png.py  pyproject.toml
checkpoints/: gru_gesture_model.pth  gru_gesture_model_best.pth  landmark_mlp_large_best.pth  landmark_mlp_small_best.pth  lstm_gesture_model.pth  lstm_gesture_model_best.pth  small_model.pth  tcn_gesture_model.pth  tcn_gesture_model_best.pth  transformer_gesture_model.pth  transformer_gesture_model_best.pth
evaluation_results/: gru_comprehensive_metrics.json  gru_hyperparams  large_comprehensive_metrics.json  large_hyperparams  lstm_comprehensive_metrics.json  lstm_hyperparms.txt  small_comprehensive_metrics.json  small_hyperparams  tcn_comprehensive_metrics.json  tcn_hyperparams.txt  transformer_comprehensive_metrics.json  transformer_hyperparams
evaluation_results/joint_angles/: gru_comprehensive_metrics.json  gru_hyperparams.txt
report/: gru_metrics.json  gru_metrics_1.json  large_metrics.json  large_metrics_1.json  large_metrics_2.json  large_metrics_3.json  small_metrics.json  small_metrics_1.json  small_metrics_2.json  small_metrics_3.json  tcn_metrics.json  tcn_metrics_1.json
scripts/: best_models_eval.py  convert_to_joint_angles.py  demo_live.py  download_asl_digits.py  ensemble_evaluate.py  evaluate.py  evaluate_baseline.py  extract_asl_landmarks.py  extract_landmarks.py  ping_drone.py  play_gesture_video.py  process_asl_data.py  record_gestures.py  run_flight_plans.py  run_live.py  run_live_crazyflie.py  simple_hover.py  train.py  train_with_curves.py
tests/: test_data.py  test_models.py  test_preprocess.py
training_curves/: lstm_training_metrics.json  tcn_training_metrics.json
(+1756 files in other folders)
