[project]
name = "mp-drone-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Mahowald",email = "mahowaldmatt@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "numpy (>=1.21.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=2.19.0,<3.0.0)",
    "accelerate (>=0.30.0,<0.31.0)",
    "wandb (>=0.19.0,<0.20.0)",
    "einops (>=0.8.0,<0.9.0)",
    "timm (>=0.9.10,<0.10.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
jupyterlab = "^4.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
